[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rtk-hermes"
version = "1.0.0"
description = "RTK plugin for Hermes — rewrites shell commands for 60-90% LLM token savings"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "rtk-ai", email = "info@rtk.sh"},
    {name = "Vinicius Gallotti", email = "vinicius.gallotti@gmail.com"},
]
keywords = ["rtk", "hermes", "hermes-agent", "llm", "token-savings", "cli-proxy"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/rtk-ai/rtk"
Repository = "https://github.com/rtk-ai/rtk"
Issues = "https://github.com/rtk-ai/rtk/issues"

[project.entry-points."hermes_agent.plugins"]
rtk-rewrite = "rtk_hermes:register"

[tool.setuptools.packages.find]
where = ["src"]
